--- a/src/blocks/ISuggest/package.json
+++ b/src/blocks/ISuggest/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ISelect",
+  "name": "ISuggest",
   "version": "0.0.0",
   "private": true,
-  "main": "./ISelect.js"
+  "main": "./ISuggest.js"
 }
