--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 .idea
 build
+index.html
 node_modules
 ncp-debug.log
 npm-debug.log
+react-sandbox.iml
