--- a/src/blocks/IInput/package.json
+++ b/src/blocks/IInput/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "IButton",
+  "name": "IInput",
   "version": "0.0.0",
   "private": true,
-  "main": "./IButton.js"
+  "main": "./IInput.js"
 }
